# sodium

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.local  README.md  carbon.toml  docker-compose.local.yml  docker-compose.yml
src/cli/: call.rs  cli.rs  parser.rs
src/server/: api.rs  cache.rs  cluster.rs  configuration.rs  node_id.rs  server.rs  threading.rs
src/sodium-cli/: cli.rs
src/sodium-server/: api.rs  cluster.rs  configuration.rs  search.rs  server.rs  threading.rs
