[package]
name = "sodium"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sodium-server"
path = "src/sodium-server/server.rs"

[[bin]]
name = "sodium-cli"
path = "src/sodium-cli/cli.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
num_cpus = "1.16"
dashmap = "6.1"
